--- a/sample.yml
+++ b/sample.yml
@@ -1,6 +1,6 @@
  -name: sample play
-  host: all
-   tasks:
+  hosts: all
+  tasks:
     - name: print hellow world
       ansible.builtin.debug:
         msg: "Hellow world"
