--- a/varibles.yml
+++ b/varibles.yml
@@ -1,7 +1,7 @@
 - name: play variables
   hosts: all
   vars:
-    URL= play.example.com
+    URL: play.example.com
   tasks:
     - name: print variable
       ansible.builtin.debug:
