--- a/varibles.yml
+++ b/varibles.yml
@@ -8,7 +8,7 @@
         msg: URL= {{URL}}
 
 - name: play variables from file
-  host: all
+  hosts: all
   vars_files:
    - sample-vars.yml
   tasks:
