--- a/varibles.yml
+++ b/varibles.yml
@@ -41,7 +41,7 @@
       register: OUT
 
     - name: ste a fact
-      ansible.builtin.set_fact
+      ansible.builtin.set_fact:
         OUTPUT: "{{OUT.stdout}}"
 
     - name: print out put of register
