--- a/roles/frontend/tasks/main.yml
+++ b/roles/frontend/tasks/main.yml
@@ -24,5 +24,10 @@
     dest: /usr/share/nginx/html/
     remote_src: yes
 
+- name: copy the roboshop conf file to default location
+  ansible.builtin.copy:
+    src: roboshop.conf
+    dest: /etc/nginx/default.d/roboshop.conf
+
 
 
