--- a/roles/mongodb/tasks/main.yml
+++ b/roles/mongodb/tasks/main.yml
@@ -1,3 +1,11 @@
 - name: print mongodb
   ansible.builtin.debug:
     msg: mongodb
+
+- name: Install mongoDB
+  ansible.builtin.yum:
+    name: mongodb-org
+    state: installed
+
+
+
