--- a/roles/mongodb/tasks/main.yml
+++ b/roles/mongodb/tasks/main.yml
@@ -2,6 +2,11 @@
   ansible.builtin.debug:
     msg: mongodb
 
+- name: copy mangodb config file
+  ansible.builtin.copy:
+    src: mangodb.repo
+    dest: /etc/yum.repos.d/mongodb.repo
+
 - name: Install mongoDB
   ansible.builtin.yum:
     name: mongodb-org
