--- a/roles/mongodb/tasks/main.yml
+++ b/roles/mongodb/tasks/main.yml
@@ -5,7 +5,7 @@
 - name: copy mangodb config file
   ansible.builtin.copy:
     src: mangodb.repo
-    dest: /etc/yum.repos.d/mongodb.repo
+    dest: /etc/yum.repos.d/
 
 - name: Install mongoDB
   ansible.builtin.yum:
