--- a/roles/mongodb/tasks/main.yml
+++ b/roles/mongodb/tasks/main.yml
@@ -37,7 +37,7 @@
 
 - name: Load the schemas js files
   community.mongodb.mongodb_shell:
-    file: '/tmp/mongodb-main/user.js'
+    file: '/tmp/mongodb-main/users.js'
     idempotent: yes
 
 
