--- a/roles/mongodb/tasks/main.yml
+++ b/roles/mongodb/tasks/main.yml
@@ -32,13 +32,13 @@
 
 - name: Load the schemas js files
   community.mongodb.mongodb_shell:
-    file: '/tmp/mongodb-main/catalogue.js'
+    file: '/tmp/mongodb-main/{{item}}.js'
     idempotent: yes
+    loop:
+      - catalogue
+      - users
 
-- name: Load the schemas js files
-  community.mongodb.mongodb_shell:
-    file: '/tmp/mongodb-main/users.js'
-    idempotent: yes
+
 
 
 
