--- a/roles/mongodb/tasks/main.yml
+++ b/roles/mongodb/tasks/main.yml
@@ -24,11 +24,10 @@
      state: restarted
      enabled: yes
 
-- name: download and extract the files
-  ansible.builtin.unarchive:
-    src: https://github.com/roboshop-devops-project/mongodb/archive/main.zip
-    dest: /tmp
-    remote_src: yes
+- name: download and extract
+  include_roles:
+    name: common
+    tasks_from: download
 
 - name: Load the schemas js files
   community.mongodb.mongodb_shell:
