--- a/roles/frontend/tasks/main.yml
+++ b/roles/frontend/tasks/main.yml
@@ -8,7 +8,7 @@
     state: installed
 
 - name: download and extract
-  include_roles:
+  include_role:
     name: common
     tasks_from: download
 
