--- a/roles/common/tasks/download.yml
+++ b/roles/common/tasks/download.yml
@@ -1,4 +1,4 @@
-- name: download and extract the files {{COMPONENTS}}
+- name: download and extract the files {{COMPONENT}}
   ansible.builtin.unarchive:
     src: https://github.com/roboshop-devops-project/{{COMPONENT}}/archive/main.zip
     dest: /tmp
